--- a/src/Web/Pages/Shared/_LoginPartial.cshtml
+++ b/src/Web/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@using CleanArchitecture.Infrastructure.Identity
 @using Microsoft.AspNetCore.Identity
+@using CleanArchitecture.Domain.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
